# lyrics

./: .gitignore  Cargo.toml  INTEGRATION_TEST_RESULTS.md  PlayListPlan.md  REFACTORING_PLAN.md  REFACTORING_PLAN_2025_Q4.md  SEEK_POINTS_PLAN.md  playlists.json
src/: debug_ui.rs  lib.rs  main.rs  main_old.rs  main_refactored.rs
src/app/: handlers.rs  mod.rs  state.rs  ui_main.rs  ui_playlist.rs  ui_settings.rs
src/app/ui/: mod.rs
src/app/ui/debug/: layout_debugger.rs  mod.rs  playback_controls.rs
src/app/ui/playlist/: context_menu.rs  list.rs  mod.rs  tabs.rs
src/app/ui/right_pane/: layout.rs  mod.rs  playback_controls.rs  seek_points.rs  track_info.rs
src/music/: library.rs  metadata.rs  mod.rs  tree.rs
src/player/: audio.rs  mod.rs  queue.rs
src/playlist/: manager.rs  mod.rs  persistence.rs
src/seek_points/: data.rs  manager.rs  mod.rs
src/settings/: mod.rs
src/ui/: components.rs  mod.rs  music_tree.rs  music_tree_simple.rs  playback_controls.rs  search.rs
src/ui/playback/: controls.rs  mod.rs  seek_bar.rs  track_list.rs  utils.rs
src/utils/: error_handling.rs  formatting.rs  mod.rs  ui_components.rs
tests/: integration_tests.rs
