[package]
name = "hello-world-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
font-kit = "0.14"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
metaflac = "0.2"
rodio = "0.18"