[package]
name = "flac-music-player"
version = "0.1.0"
edition = "2021"

[lib]
name = "flac_music_player"
path = "src/lib.rs"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
font-kit = "0.14"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
metaflac = "0.2"
kira = { version = "0.9", features = ["cpal"] }
image = "0.24"
uuid = { version = "1.0", features = ["v4"] }